--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     }
   },
   "scripts": {
-    "test": "./vendor/bin/phpunit --coverage-text"
+    "test": "./vendor/bin/phpunit --coverage-text --coverage-html ./tests/coverage"
   },
   "require-dev": {
     "phpunit/phpunit": "^8"
