--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,8 @@
     }
   ],
   "require": {
-    "php": "^7.4|^8.0",
-    "myclabs/php-enum": "^1.7",
-    "guzzlehttp/guzzle": "^6.5",
+    "php": "^8.4",
+    "guzzlehttp/guzzle": "^7.10",
     "ext-json": "*"
   },
   "autoload": {
@@ -24,6 +23,6 @@
     "test": "./vendor/bin/phpunit --coverage-text --coverage-html ./tests/coverage"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8"
+    "phpunit/phpunit": "^11.0"
   }
 }
