--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     }
   },
   "scripts": {
-    "test": "./vendor/bin/phpunit --coverage-text --coverage-html ./tests/coverage"
+    "test": "./vendor/bin/phpunit",
+    "test:coverage": "XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-text --coverage-html ./tests/coverage"
   },
   "require-dev": {
     "phpunit/phpunit": "^11.0"
